Fix box-shadow painting for fieldset with legend, background, and border-radius

This regressed since https://codereview.chromium.org/2464053003
which separated box-shadow painting from background painting, but
missed modification to FieldsetPainter about box-shadow/background
painting.

BUG=713331
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2836673002
Cr-Commit-Position: refs/heads/master@{#466441}

Former-commit-id: 7d8aac7b2e42174063748f68741f2a681df2e7b9